misc updates to vertx-web-kotlin-dsljson